[Feat] Added all

--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>RW Sapuluh Cipagalo</title>
     <link rel="stylesheet" href="./src/assets/style.css">
     <link rel="stylesheet" href="/src/assets/owlcarousel/dist/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="/src/assets/owlcarousel/dist/assets/owl.theme.default.min.css">
-    <!-- <link rel="stylesheet" href="/path/to/leaflet.css" />
-    <script src="/path/to/leaflet.js"></script> -->
   </head>
   <body>
     <div id="app"></div>
